LPD-97127 Test Design Library roles