@@ -13,6 +13,7 @@ import com.liferay.portal.kernel.model.Role;
 import com.liferay.portal.test.rule.LiferayUnitTestRule;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.junit.Assert;
 import org.junit.ClassRule;
@@ -79,7 +80,7 @@ public class DepotRoleUtilTest {
 					_mockDepotEntry(DepotConstants.TYPE_ASSET_LIBRARY),
 					Arrays.asList(role1, role2, role3, role4, role5)));
 			Assert.assertEquals(
-				Arrays.asList(role1, role4, role5),
+				List.of(role1),
 				DepotRoleUtil.filter(
 					_mockDepotEntry(DepotConstants.TYPE_DESIGN_LIBRARY),
 					Arrays.asList(role1, role2, role3, role4, role5)));
@@ -141,7 +142,7 @@ public class DepotRoleUtilTest {
 				DepotRoleUtil.filter(
 					Arrays.asList(role1, role2, role3, role4, role5), ""));
 			Assert.assertEquals(
-				Arrays.asList(role1, role4, role5),
+				List.of(role1),
 				DepotRoleUtil.filter(
 					Arrays.asList(role1, role2, role3, role4, role5),
 					DepotRolesConstants.SUBTYPE_DESIGN_LIBRARY));
